# seperate the project to 5 class library , API project  and  using Onion Arechitecture and Download package  which I needed  at start

--- a/ASAP-API/appsettings.json
+++ b/ASAP-API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connstr": "Data Source=.;Initial Catalog=ASAP-System;Integrated Security=True;Encrypt=false;Trust Server Certificate=false"
+  }//  change the  data source with suitable server 
 }
