--- a/ASAP-Application/ASAP-Application.csproj
+++ b/ASAP-Application/ASAP-Application.csproj
@@ -8,8 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ASAP-DTO\ASAP-DTO.csproj" />
     <ProjectReference Include="..\ASAP-Models\ASAP-Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mapper\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
