--- a/ASAP-API/appsettings.json
+++ b/ASAP-API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //  conntection String with suitable server
     "Connstr": "Data Source=.;Initial Catalog=ASAP-System;Integrated Security=True;Encrypt=false;Trust Server Certificate=false"
-  }//  change the  data source with suitable server 
+  }
 }
