#  finsih the create operation in all layer and  and check all validation  before saving in database

--- a/ASAP-API/appsettings.json
+++ b/ASAP-API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //  conntection String with suitable server
-    "Connstr": "Data Source=.;Initial Catalog=ASAP-System;Integrated Security=True;Encrypt=false;Trust Server Certificate=false"
+    //  choose conntection String with suitable server
+    "Connstr": "Data Source=.;Initial Catalog=ASAPSystem;Integrated Security=True;Encrypt=false;Trust Server Certificate=false"
   }
 }
