# Make service to  send email   to all client

--- a/ASAP-API/appsettings.json
+++ b/ASAP-API/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     //  choose conntection String with suitable server
     "Connstr": "Data Source=.;Initial Catalog=ASAPSystem;Integrated Security=True;Encrypt=false;Trust Server Certificate=false"
+  },
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "keroloshenry182@gmail.com",
+    "Username": "keroloshenry182@gmail.com",
+    "Password": "eykl fmpe pvhq bocr"
   }
 }
