# Make service to Consume API and Save in DataBase

--- a/ASAP-API/appsettings.json
+++ b/ASAP-API/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -16,5 +17,9 @@
     "SenderEmail": "keroloshenry182@gmail.com",
     "Username": "keroloshenry182@gmail.com",
     "Password": "eykl fmpe pvhq bocr"
+  },
+  "ApiSettings": {
+    "ApiUrl": "https://api.polygon.io/v3/reference/splits?apiKey=prpzYUpeBsbHyJop6VzNLPfhpEin9uvE",
+    "ApiKey": "prpzYUpeBsbHyJop6VzNLPfhpEin9uvE"
   }
 }
