--- a/ASAP-API/appsettings.json
+++ b/ASAP-API/appsettings.json
@@ -2,12 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //  choose conntection String with suitable server
     "Connstr": "Data Source=.;Initial Catalog=ASAPSystem;Integrated Security=True;Encrypt=false;Trust Server Certificate=false"
+  },
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "keroloshenry182@gmail.com",
+    "Username": "keroloshenry182@gmail.com",
+    "Password": "eykl fmpe pvhq bocr"
   }
 }
